Fixed SC issues